[gd_scene load_steps=5 format=3 uid="uid://djl4d3slwcf1w"]

[ext_resource type="Script" path="res://scripts/ship.gd" id="1_c7eyp"]
[ext_resource type="Texture2D" uid="uid://diak4cs683rih" path="res://assets/sprites/S.png" id="2_4k1hj"]
[ext_resource type="AudioStream" uid="uid://dlnfkpef6hnwk" path="res://assets/audio/Base Theme.mp3" id="3_akmt1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xe1mm"]
size = Vector2(288, 188.5)

[node name="ship" type="Area2D"]
position = Vector2(-4, 16)
collision_layer = 17
collision_mask = 17
script = ExtResource("1_c7eyp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -126)
shape = SubResource("RectangleShape2D_xe1mm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.99998, -2.00002)
scale = Vector2(0.356122, 0.25)
texture = ExtResource("2_4k1hj")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="CanvasLayer2"]
anchors_preset = -1
anchor_left = 0.38
anchor_top = 0.178
anchor_right = 0.67
anchor_bottom = 0.432
offset_left = 0.399963
offset_top = -0.12001
offset_right = -0.400024
offset_bottom = -0.279999

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 75.0
offset_right = -17.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2

[node name="returnToShip" type="Button" parent="CanvasLayer2/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Return to ship "

[node name="basetheme" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_akmt1")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="pressed" from="CanvasLayer2/Panel/HBoxContainer/returnToShip" to="." method="_on_return_to_ship_pressed"]
